...
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_today">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

...
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:layout_marginTop="12dp"
                        android:id="@+id/editText_grateful1"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:fontFamily="serif" />

...
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:layout_marginTop="12dp"
                        android:id="@+id/editText_grateful2"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:fontFamily="serif"/>

...
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:layout_marginTop="12dp"
                        android:id="@+id/editText_grateful3"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:fontFamily="serif"/>

...
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/section_happend_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Today's highlights:"
                        android:fontFamily="serif"
                        android:textSize="18dp"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
...
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:layout_marginTop="12dp"
                        android:id="@+id/editText_better1"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:fontFamily="serif"/>

...
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="journal.app.niklas.fastjournal.MainActivity$PlaceholderFragment"
        android:id="@+id/layout_all_entries"
        android:background="#ababab">

        <ListView
            android:id="@+id/all_entries_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="#b5b5b5"
            android:dividerHeight="1dp"
            />

...
