<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="journal.app.niklas.fastjournal.MainActivity">

    <item
        android:id="@+id/action_save_today"
        android:orderInCategory="100"
        android:title="Save Entry"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always" />

</menu>
